--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,5 @@ jobs:
       name: run tests
       command: |
         . venv/bin/activate
-        flake8 --exclude=venv* --statistics
-        pytest -v --cov=calculator
+        python3 -m flake8 --exclude=venv* --statistics
+        python3 -m pytest -v --cov=calculator
